# sql_copilot_v2

./: .env.example  README.md  audit_log.db  electron-main.cjs  ems_demo.db  metadata.json  package-lock.json  package.json  run_browser.bat  run_electron.bat  run_tauri.bat  server.ts  vite.config.ts
backend/: executor.py
server/: ai_settings.ts  copilot.ts  db_manager.ts  scheduler.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: client.ts
src/components/: DependencyGraph.tsx  Layout.tsx  ModelSettingsPanel.tsx  SqlEditor.tsx
src/pages/: ApprovalPage.tsx  ConnectDatabasePage.tsx  InsightsPage.tsx  SchemaExplorerPage.tsx  SqlCopilotPage.tsx  TasksPage.tsx
