[package]
name = "ems-sql-copilot"
version = "0.1.0"
description = "EMS SQL Copilot & Auditor Desktop"
authors = ["Viji"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
